# SimpleProxy

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  main.rs  proxy.rs  tray.rs
