[package]
name = "simple-proxy"
version = "1.0.0"
description = "SimpleProxy - 一键翻墙，给爸妈用的 VPN 客户端"
authors = ["Emily"]
edition = "2021"

[lib]
name = "simple_proxy_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
dirs = "5"
chrono = "0.4"
